added pandas df step

--- a/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
+++ b/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8a78cfd4",
+   "id": "211ff086",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "687e824f",
+   "id": "2b8e4c6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1e5f99b7",
+   "id": "6590fbc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6d1c7c0f",
+   "execution_count": 4,
+   "id": "564968be",
    "metadata": {},
    "outputs": [
     {
@@ -97,43 +97,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\widehat { H } = \\displaystyle \\frac { 2 \\pi }...</td>\n",
-       "      <td>db69228953de400.png</td>\n",
+       "      <td>V ( \\phi ) = \\rho _ { b a r e } + M ^ { 4 } f ...</td>\n",
+       "      <td>c0abc310ba9a522.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>289</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>D _ { \\alpha } ^ { i } D ^ { j \\alpha } \\; w =...</td>\n",
-       "      <td>a452f8cc9263922.png</td>\n",
+       "      <td>\\{ \\beta ^ { \\mu } , \\beta ^ { \\nu } \\} = \\bet...</td>\n",
+       "      <td>cd448a8c5023ee9.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>135</td>\n",
+       "      <td>113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>s h _ { 2 } + \\nu = \\partial ^ { i } \\left( 2 ...</td>\n",
-       "      <td>b76614553695957.png</td>\n",
+       "      <td>\\begin{array} { r c l } { W _ { z } \\left( \\be...</td>\n",
+       "      <td>b9743c0ebcd23c8.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>303</td>\n",
+       "      <td>1059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q _ { 2 n } ( { \\bf A } ) = \\left\\langle { \\bf...</td>\n",
-       "      <td>56102e6fec5ead8.png</td>\n",
+       "      <td>\\nabla \\times \\vec { a } = \\kappa \\vec { a } ,...</td>\n",
+       "      <td>188316c7462977a.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>74</td>\n",
+       "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Z _ { 2 n } = 1 - \\frac { 1 } { n } \\ell \\delt...</td>\n",
-       "      <td>efbd72c272f1c47.png</td>\n",
+       "      <td>P \\dot { v } = ( \\dot { x } _ { i } ) ^ { 2 } ...</td>\n",
+       "      <td>0d70d075826fed3.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>199</td>\n",
+       "      <td>108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -144,93 +144,91 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>\\frac { 1 } { 4 \\pi } \\int _ { l ^ { 4 } } [ |...</td>\n",
-       "      <td>29e5c61c5d19549.png</td>\n",
+       "      <th>182938</th>\n",
+       "      <td>{ \\bf X } = { \\bf y } + { \\bf v } _ { 1 } T = ...</td>\n",
+       "      <td>2ccee14720e75e5.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>155</td>\n",
+       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>\\vert j , m &gt; = \\frac { { a _ { + } ^ { \\dagge...</td>\n",
-       "      <td>3f37131cacf0642.png</td>\n",
+       "      <th>182939</th>\n",
+       "      <td>\\gamma _ { \\pm } ( x ) = \\frac { 1 } { 2 } \\pm...</td>\n",
+       "      <td>b1ad2aabb338a34.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>159</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>{ \\cal O } _ { 2 } ^ { i } { } _ { k } { \\cal ...</td>\n",
-       "      <td>a31f964db6eda23.png</td>\n",
+       "      <th>182940</th>\n",
+       "      <td>[ { \\cal X } _ { 0 } , { \\cal X } _ { i } ] = ...</td>\n",
+       "      <td>104d8e5abdd7018.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>622</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>\\int d ^ { 2 } y \\, \\left( V _ { ( \\mu ) } ^ {...</td>\n",
-       "      <td>b188007079ca183.png</td>\n",
+       "      <th>182941</th>\n",
+       "      <td>\\bar { \\Omega } \\bar { L } \\bar { \\Omega } ^ {...</td>\n",
+       "      <td>d639460838e500f.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>166</td>\n",
+       "      <td>65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>e _ { \\mu } \\rightarrow e _ { \\mu } ^ { \\prime...</td>\n",
-       "      <td>106d3fe3fc3274b.png</td>\n",
+       "      <th>182942</th>\n",
+       "      <td>F = - \\frac { 2 } { 3 \\pi } \\mu ^ { 4 } r _ { ...</td>\n",
+       "      <td>8d963a21a17ce6a.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>181</td>\n",
+       "      <td>382</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>69 rows × 5 columns</p>\n",
+       "<p>182943 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              formula           image_name  \\\n",
-       "0   \\widehat { H } = \\displaystyle \\frac { 2 \\pi }...  db69228953de400.png   \n",
-       "1   D _ { \\alpha } ^ { i } D ^ { j \\alpha } \\; w =...  a452f8cc9263922.png   \n",
-       "2   s h _ { 2 } + \\nu = \\partial ^ { i } \\left( 2 ...  b76614553695957.png   \n",
-       "3   Q _ { 2 n } ( { \\bf A } ) = \\left\\langle { \\bf...  56102e6fec5ead8.png   \n",
-       "4   Z _ { 2 n } = 1 - \\frac { 1 } { n } \\ell \\delt...  efbd72c272f1c47.png   \n",
-       "..                                                ...                  ...   \n",
-       "64  \\frac { 1 } { 4 \\pi } \\int _ { l ^ { 4 } } [ |...  29e5c61c5d19549.png   \n",
-       "65  \\vert j , m > = \\frac { { a _ { + } ^ { \\dagge...  3f37131cacf0642.png   \n",
-       "66  { \\cal O } _ { 2 } ^ { i } { } _ { k } { \\cal ...  a31f964db6eda23.png   \n",
-       "67  \\int d ^ { 2 } y \\, \\left( V _ { ( \\mu ) } ^ {...  b188007079ca183.png   \n",
-       "68  e _ { \\mu } \\rightarrow e _ { \\mu } ^ { \\prime...  106d3fe3fc3274b.png   \n",
+       "                                                  formula  \\\n",
+       "0       V ( \\phi ) = \\rho _ { b a r e } + M ^ { 4 } f ...   \n",
+       "1       \\{ \\beta ^ { \\mu } , \\beta ^ { \\nu } \\} = \\bet...   \n",
+       "2       \\begin{array} { r c l } { W _ { z } \\left( \\be...   \n",
+       "3       \\nabla \\times \\vec { a } = \\kappa \\vec { a } ,...   \n",
+       "4       P \\dot { v } = ( \\dot { x } _ { i } ) ^ { 2 } ...   \n",
+       "...                                                   ...   \n",
+       "182938  { \\bf X } = { \\bf y } + { \\bf v } _ { 1 } T = ...   \n",
+       "182939  \\gamma _ { \\pm } ( x ) = \\frac { 1 } { 2 } \\pm...   \n",
+       "182940  [ { \\cal X } _ { 0 } , { \\cal X } _ { i } ] = ...   \n",
+       "182941  \\bar { \\Omega } \\bar { L } \\bar { \\Omega } ^ {...   \n",
+       "182942  F = - \\frac { 2 } { 3 \\pi } \\mu ^ { 4 } r _ { ...   \n",
        "\n",
-       "    height  width  formula_length  \n",
-       "0       64    512             289  \n",
-       "1       64    512             135  \n",
-       "2       64    512             303  \n",
-       "3       64    512              74  \n",
-       "4       64    512             199  \n",
-       "..     ...    ...             ...  \n",
-       "64      64    512             155  \n",
-       "65      64    512             159  \n",
-       "66      64    512             622  \n",
-       "67      64    512             166  \n",
-       "68      64    512             181  \n",
+       "                 image_name  height  width  formula_length  \n",
+       "0       c0abc310ba9a522.png      64    512              64  \n",
+       "1       cd448a8c5023ee9.png      64    512             113  \n",
+       "2       b9743c0ebcd23c8.png      64    512            1059  \n",
+       "3       188316c7462977a.png      64    512              95  \n",
+       "4       0d70d075826fed3.png      64    512             108  \n",
+       "...                     ...     ...    ...             ...  \n",
+       "182938  2ccee14720e75e5.png      64    512              77  \n",
+       "182939  b1ad2aabb338a34.png      64    512              84  \n",
+       "182940  104d8e5abdd7018.png      64    512              90  \n",
+       "182941  d639460838e500f.png      64    512              65  \n",
+       "182942  8d963a21a17ce6a.png      64    512             382  \n",
        "\n",
-       "[69 rows x 5 columns]"
+       "[182943 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.raw_df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b893bdd",
+   "id": "d2e9c6bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -238,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d88346d",
+   "id": "6fe5d9af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -246,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a32164",
+   "id": "12f42fd6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "445f6c12",
+   "id": "3127af6a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -262,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e11305c",
+   "id": "29dac311",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -270,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72622e5",
+   "id": "98d7c153",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -278,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e56179c6",
+   "id": "b8417e6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -286,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e8c08b",
+   "id": "6a2b05be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1beea5eb",
+   "id": "9472adbe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -302,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4478fe",
+   "id": "f2c92517",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -310,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d451c11",
+   "id": "aab112bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -318,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b27ffb7b",
+   "id": "2d72130a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -326,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e93af9",
+   "id": "53b04e28",
    "metadata": {},
    "outputs": [],
    "source": []
