added vocabulary utils and tokenazation

--- a/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
+++ b/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "211ff086",
+   "id": "f8d9bc9e",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b8e4c6c",
+   "id": "69974136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6590fbc2",
+   "id": "0a77b6ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = Data_Module()\n",
-    "df.prepare_data()"
+    "data = Data_Module()\n",
+    "data.prepare_data()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "564968be",
+   "id": "4f58db00",
    "metadata": {},
    "outputs": [
     {
@@ -92,48 +92,60 @@
        "      <th>height</th>\n",
        "      <th>width</th>\n",
        "      <th>formula_length</th>\n",
+       "      <th>latex_tokenized</th>\n",
+       "      <th>tokenized_len</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>V ( \\phi ) = \\rho _ { b a r e } + M ^ { 4 } f ...</td>\n",
-       "      <td>c0abc310ba9a522.png</td>\n",
+       "      <td>\\widehat { H } = \\displaystyle \\frac { 2 \\pi }...</td>\n",
+       "      <td>db69228953de400.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>64</td>\n",
+       "      <td>289</td>\n",
+       "      <td>[\\widehat, {, H, }, =, \\displaystyle, \\frac, {...</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\{ \\beta ^ { \\mu } , \\beta ^ { \\nu } \\} = \\bet...</td>\n",
-       "      <td>cd448a8c5023ee9.png</td>\n",
+       "      <td>D _ { \\alpha } ^ { i } D ^ { j \\alpha } \\; w =...</td>\n",
+       "      <td>a452f8cc9263922.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>113</td>\n",
+       "      <td>135</td>\n",
+       "      <td>[D, _, {, \\alpha, }, ^, {, i, }, D, ^, {, j, \\...</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\begin{array} { r c l } { W _ { z } \\left( \\be...</td>\n",
-       "      <td>b9743c0ebcd23c8.png</td>\n",
+       "      <td>s h _ { 2 } + \\nu = \\partial ^ { i } \\left( 2 ...</td>\n",
+       "      <td>b76614553695957.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>1059</td>\n",
+       "      <td>303</td>\n",
+       "      <td>[s, h, _, {, 2, }, +, \\nu, =, \\partial, ^, {, ...</td>\n",
+       "      <td>104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nabla \\times \\vec { a } = \\kappa \\vec { a } ,...</td>\n",
-       "      <td>188316c7462977a.png</td>\n",
+       "      <td>Q _ { 2 n } ( { \\bf A } ) = \\left\\langle { \\bf...</td>\n",
+       "      <td>56102e6fec5ead8.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>95</td>\n",
+       "      <td>74</td>\n",
+       "      <td>[Q, _, {, 2, n, }, (, {, \\bf, A, }, ), =, \\lef...</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>P \\dot { v } = ( \\dot { x } _ { i } ) ^ { 2 } ...</td>\n",
-       "      <td>0d70d075826fed3.png</td>\n",
+       "      <td>Z _ { 2 n } = 1 - \\frac { 1 } { n } \\ell \\delt...</td>\n",
+       "      <td>efbd72c272f1c47.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>108</td>\n",
+       "      <td>199</td>\n",
+       "      <td>[Z, _, {, 2, n, }, =, 1, -, \\frac, {, 1, }, {,...</td>\n",
+       "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -142,80 +154,105 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182938</th>\n",
-       "      <td>{ \\bf X } = { \\bf y } + { \\bf v } _ { 1 } T = ...</td>\n",
-       "      <td>2ccee14720e75e5.png</td>\n",
+       "      <th>64</th>\n",
+       "      <td>\\frac { 1 } { 4 \\pi } \\int _ { l ^ { 4 } } [ |...</td>\n",
+       "      <td>29e5c61c5d19549.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>77</td>\n",
+       "      <td>155</td>\n",
+       "      <td>[\\frac, {, 1, }, {, 4, \\pi, }, \\int, _, {, l, ...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182939</th>\n",
-       "      <td>\\gamma _ { \\pm } ( x ) = \\frac { 1 } { 2 } \\pm...</td>\n",
-       "      <td>b1ad2aabb338a34.png</td>\n",
+       "      <th>65</th>\n",
+       "      <td>\\vert j , m &gt; = \\frac { { a _ { + } ^ { \\dagge...</td>\n",
+       "      <td>3f37131cacf0642.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>84</td>\n",
+       "      <td>159</td>\n",
+       "      <td>[\\vert, j, ,, m, &gt;, =, \\frac, {, {, a, _, {, +...</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182940</th>\n",
-       "      <td>[ { \\cal X } _ { 0 } , { \\cal X } _ { i } ] = ...</td>\n",
-       "      <td>104d8e5abdd7018.png</td>\n",
+       "      <th>66</th>\n",
+       "      <td>{ \\cal O } _ { 2 } ^ { i } { } _ { k } { \\cal ...</td>\n",
+       "      <td>a31f964db6eda23.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>90</td>\n",
+       "      <td>622</td>\n",
+       "      <td>[{, \\cal, O, }, _, {, 2, }, ^, {, i, }, {, }, ...</td>\n",
+       "      <td>228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182941</th>\n",
-       "      <td>\\bar { \\Omega } \\bar { L } \\bar { \\Omega } ^ {...</td>\n",
-       "      <td>d639460838e500f.png</td>\n",
+       "      <th>67</th>\n",
+       "      <td>\\int d ^ { 2 } y \\, \\left( V _ { ( \\mu ) } ^ {...</td>\n",
+       "      <td>b188007079ca183.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>65</td>\n",
+       "      <td>166</td>\n",
+       "      <td>[\\int, d, ^, {, 2, }, y, \\,, \\left(, V, _, {, ...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182942</th>\n",
-       "      <td>F = - \\frac { 2 } { 3 \\pi } \\mu ^ { 4 } r _ { ...</td>\n",
-       "      <td>8d963a21a17ce6a.png</td>\n",
+       "      <th>68</th>\n",
+       "      <td>e _ { \\mu } \\rightarrow e _ { \\mu } ^ { \\prime...</td>\n",
+       "      <td>106d3fe3fc3274b.png</td>\n",
        "      <td>64</td>\n",
        "      <td>512</td>\n",
-       "      <td>382</td>\n",
+       "      <td>181</td>\n",
+       "      <td>[e, _, {, \\mu, }, \\rightarrow, e, _, {, \\mu, }...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>182943 rows × 5 columns</p>\n",
+       "<p>68 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  formula  \\\n",
-       "0       V ( \\phi ) = \\rho _ { b a r e } + M ^ { 4 } f ...   \n",
-       "1       \\{ \\beta ^ { \\mu } , \\beta ^ { \\nu } \\} = \\bet...   \n",
-       "2       \\begin{array} { r c l } { W _ { z } \\left( \\be...   \n",
-       "3       \\nabla \\times \\vec { a } = \\kappa \\vec { a } ,...   \n",
-       "4       P \\dot { v } = ( \\dot { x } _ { i } ) ^ { 2 } ...   \n",
-       "...                                                   ...   \n",
-       "182938  { \\bf X } = { \\bf y } + { \\bf v } _ { 1 } T = ...   \n",
-       "182939  \\gamma _ { \\pm } ( x ) = \\frac { 1 } { 2 } \\pm...   \n",
-       "182940  [ { \\cal X } _ { 0 } , { \\cal X } _ { i } ] = ...   \n",
-       "182941  \\bar { \\Omega } \\bar { L } \\bar { \\Omega } ^ {...   \n",
-       "182942  F = - \\frac { 2 } { 3 \\pi } \\mu ^ { 4 } r _ { ...   \n",
+       "                                              formula           image_name  \\\n",
+       "0   \\widehat { H } = \\displaystyle \\frac { 2 \\pi }...  db69228953de400.png   \n",
+       "1   D _ { \\alpha } ^ { i } D ^ { j \\alpha } \\; w =...  a452f8cc9263922.png   \n",
+       "2   s h _ { 2 } + \\nu = \\partial ^ { i } \\left( 2 ...  b76614553695957.png   \n",
+       "3   Q _ { 2 n } ( { \\bf A } ) = \\left\\langle { \\bf...  56102e6fec5ead8.png   \n",
+       "4   Z _ { 2 n } = 1 - \\frac { 1 } { n } \\ell \\delt...  efbd72c272f1c47.png   \n",
+       "..                                                ...                  ...   \n",
+       "64  \\frac { 1 } { 4 \\pi } \\int _ { l ^ { 4 } } [ |...  29e5c61c5d19549.png   \n",
+       "65  \\vert j , m > = \\frac { { a _ { + } ^ { \\dagge...  3f37131cacf0642.png   \n",
+       "66  { \\cal O } _ { 2 } ^ { i } { } _ { k } { \\cal ...  a31f964db6eda23.png   \n",
+       "67  \\int d ^ { 2 } y \\, \\left( V _ { ( \\mu ) } ^ {...  b188007079ca183.png   \n",
+       "68  e _ { \\mu } \\rightarrow e _ { \\mu } ^ { \\prime...  106d3fe3fc3274b.png   \n",
        "\n",
-       "                 image_name  height  width  formula_length  \n",
-       "0       c0abc310ba9a522.png      64    512              64  \n",
-       "1       cd448a8c5023ee9.png      64    512             113  \n",
-       "2       b9743c0ebcd23c8.png      64    512            1059  \n",
-       "3       188316c7462977a.png      64    512              95  \n",
-       "4       0d70d075826fed3.png      64    512             108  \n",
-       "...                     ...     ...    ...             ...  \n",
-       "182938  2ccee14720e75e5.png      64    512              77  \n",
-       "182939  b1ad2aabb338a34.png      64    512              84  \n",
-       "182940  104d8e5abdd7018.png      64    512              90  \n",
-       "182941  d639460838e500f.png      64    512              65  \n",
-       "182942  8d963a21a17ce6a.png      64    512             382  \n",
+       "    height  width  formula_length  \\\n",
+       "0       64    512             289   \n",
+       "1       64    512             135   \n",
+       "2       64    512             303   \n",
+       "3       64    512              74   \n",
+       "4       64    512             199   \n",
+       "..     ...    ...             ...   \n",
+       "64      64    512             155   \n",
+       "65      64    512             159   \n",
+       "66      64    512             622   \n",
+       "67      64    512             166   \n",
+       "68      64    512             181   \n",
        "\n",
-       "[182943 rows x 5 columns]"
+       "                                      latex_tokenized  tokenized_len  \n",
+       "0   [\\widehat, {, H, }, =, \\displaystyle, \\frac, {...             83  \n",
+       "1   [D, _, {, \\alpha, }, ^, {, i, }, D, ^, {, j, \\...             52  \n",
+       "2   [s, h, _, {, 2, }, +, \\nu, =, \\partial, ^, {, ...            104  \n",
+       "3   [Q, _, {, 2, n, }, (, {, \\bf, A, }, ), =, \\lef...             24  \n",
+       "4   [Z, _, {, 2, n, }, =, 1, -, \\frac, {, 1, }, {,...             76  \n",
+       "..                                                ...            ...  \n",
+       "64  [\\frac, {, 1, }, {, 4, \\pi, }, \\int, _, {, l, ...             69  \n",
+       "65  [\\vert, j, ,, m, >, =, \\frac, {, {, a, _, {, +...             66  \n",
+       "66  [{, \\cal, O, }, _, {, 2, }, ^, {, i, }, {, }, ...            228  \n",
+       "67  [\\int, d, ^, {, 2, }, y, \\,, \\left(, V, _, {, ...             69  \n",
+       "68  [e, _, {, \\mu, }, \\rightarrow, e, _, {, \\mu, }...             69  \n",
+       "\n",
+       "[68 rows x 7 columns]"
       ]
      },
      "execution_count": 4,
@@ -223,12 +260,59 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2d4bf2cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "179"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print( \n",
+    "    'Vocabulary size:',len(data.vocabulary),\n",
+    "    ''\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9fcc4ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "230"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.max_label_length"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e9c6bb",
+   "id": "cca5b344",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe5d9af",
+   "id": "92c50552",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12f42fd6",
+   "id": "2b6c02fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -252,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3127af6a",
+   "id": "047f3d45",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -260,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29dac311",
+   "id": "a2c8cd89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -268,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d7c153",
+   "id": "325add41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -276,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8417e6c",
+   "id": "d6229b29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -284,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2b05be",
+   "id": "9056e9df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -292,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9472adbe",
+   "id": "9fc5795b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -300,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c92517",
+   "id": "a3b78b20",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -308,23 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab112bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d72130a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b04e28",
+   "id": "590d109e",
    "metadata": {},
    "outputs": [],
    "source": []
