added vocabulary utils and tokenazation

--- a/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
+++ b/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f8d9bc9e",
+   "id": "9508d9e3",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "69974136",
+   "id": "ef41a0bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a77b6ca",
+   "id": "04d2b088",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = Data_Module()\n",
-    "data.prepare_data()"
+    "data.prepare_dataframe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f58db00",
+   "id": "cfcd07c5",
    "metadata": {},
    "outputs": [
     {
@@ -266,53 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2d4bf2cb",
+   "execution_count": 5,
+   "id": "fb8072ad",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "179"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size: 179 \n",
+      "Max label length: 230\n"
+     ]
     }
    ],
    "source": [
     "print( \n",
     "    'Vocabulary size:',len(data.vocabulary),\n",
-    "    ''\n",
+    "    '\\nMax label length:', data.max_label_length\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9fcc4ef0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "230"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.max_label_length"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "cca5b344",
+   "id": "c5f9cfda",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c50552",
+   "id": "5a99f93b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -328,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6c02fa",
+   "id": "1b11e236",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -336,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047f3d45",
+   "id": "08a78257",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -344,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c8cd89",
+   "id": "a7a60285",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -352,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325add41",
+   "id": "478c3203",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -360,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6229b29",
+   "id": "4e3ba8a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -368,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9056e9df",
+   "id": "8ed25739",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -376,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc5795b",
+   "id": "c38b8ced",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -384,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3b78b20",
+   "id": "a16c3e75",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -392,7 +369,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590d109e",
+   "id": "45a2b1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "425d5956",
    "metadata": {},
    "outputs": [],
    "source": []
