added setup method with transformations

--- a/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
+++ b/Jupyter_Notebooks/Printed_Tex_Character_tokenizer_Documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9508d9e3",
+   "id": "ef241be1",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ef41a0bc",
+   "id": "98c4e0b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "04d2b088",
+   "id": "5e1b5657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cfcd07c5",
+   "id": "8460098b",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fb8072ad",
+   "id": "10ec88a1",
    "metadata": {},
    "outputs": [
     {
@@ -288,8 +288,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "8c31f2c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.setup_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9b7edda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[255, 255, 254,  ..., 251, 255, 255],\n",
+       "          [251, 255, 255,  ..., 255, 255, 255],\n",
+       "          [255, 254, 251,  ..., 255, 249, 255],\n",
+       "          ...,\n",
+       "          [253, 255, 255,  ..., 254, 250, 252],\n",
+       "          [255, 245, 252,  ..., 255, 251, 253],\n",
+       "          [254, 250, 255,  ..., 247, 255, 252]]], dtype=torch.uint8),\n",
+       " tensor([  0,  40, 148, 175,  15, 162, 177,   5, 175,  68,  25, 177,   6,  23,\n",
+       "          98, 175,  68,  30, 177, 147, 175, 162, 177, 122,  11,   1,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.data_train[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c5f9cfda",
+   "id": "b36fed28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -297,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a99f93b",
+   "id": "eaf42b82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b11e236",
+   "id": "db776394",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -313,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a78257",
+   "id": "5c8f5774",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -321,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a60285",
+   "id": "38d31d54",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -329,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "478c3203",
+   "id": "143ab753",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3ba8a6",
+   "id": "89179c55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -345,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ed25739",
+   "id": "323398ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -353,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c38b8ced",
+   "id": "40a89383",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -361,23 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a16c3e75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45a2b1e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "425d5956",
+   "id": "3a37792b",
    "metadata": {},
    "outputs": [],
    "source": []
